// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-vue2 > should add vue-loader and VueLoaderPlugin correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/lib/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
              "experimentalInlineMatchResource": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.ts\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "jsc": {
                "parser": {
                  "syntax": "typescript",
                },
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    VueLoaderPlugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;

exports[`plugin-vue2 > should allow to configure vueLoader options 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/lib/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
              "experimentalInlineMatchResource": true,
              "hotReload": false,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.ts\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "jsc": {
                "parser": {
                  "syntax": "typescript",
                },
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    VueLoaderPlugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;
